tests/transpiler/x/fortran/str_builtin.f90
program main
  implicit none
  print '(A)', trim(str(123))
end program main
